# tiger

./: .gitignore  README.md  metadata.py  musicdl.py  pyproject.toml  requirements.txt  smart_metadata.py  thumblogic.py  thumbnail_gui.py
assets/: jsondump.json
src/: constants.py  metadata.py  thumbnail_gui.py
tiger/: __init__.py  __main__.py  constants.py  dl.py  extractors.py  logo.py  metadata.py  musicdl.py  thumbnail.py  thumbnail_gui.py  utils.py
